--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "detect-indentation",
-  "description": "Utility to detect indentation from a string",
   "version": "1.0.0",
+  "description": "Utility to detect the indentation used in a string",
   "homepage": "https://github.com/bevry/detect-indentation",
   "license": "MIT",
   "keywords": [
     "indentation",
-    "detect",
     "tabs",
-    "spaces"
+    "spaces",
+    "detect"
   ],
   "badges": {
     "list": [
@@ -58,13 +58,27 @@
         "esnext",
         "require"
       ]
+    },
+    {
+      "description": "Babel Compiled + ES2015 + Require",
+      "directory": "es2015",
+      "entry": "index.js",
+      "syntaxes": [
+        "javascript",
+        "es2015",
+        "require"
+      ]
     }
   ],
-  "main": "source/index.js",
-  "browser": "source/index.js",
-  "dependencies": {},
+  "main": "index.js",
+  "browser": "es2015/index.js",
+  "dependencies": {
+    "editions": "^1.3.4"
+  },
   "devDependencies": {
     "assert-helpers": "^4.5.1",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "documentation": "^8.0.0",
     "eslint": "^4.19.1",
     "joe": "^2.0.2",
@@ -76,7 +90,8 @@
     "our:setup": "npm run our:setup:npm",
     "our:setup:npm": "npm install",
     "our:clean": "rm -Rf ./docs ./es2015 ./es5 ./out",
-    "our:compile": "echo no need for this project",
+    "our:compile": "npm run our:compile:es2015",
+    "our:compile:es2015": "babel ./source --out-dir ./es2015 --presets es2015",
     "our:meta": "npm run our:meta:docs && npm run our:meta:projectz",
     "our:meta:docs": "documentation build -f html -o ./docs -g --shallow ./source/**.js",
     "our:meta:projectz": "projectz compile",
@@ -90,8 +105,10 @@
     "our:release:check-dirty": "git diff --exit-code",
     "our:release:tag": "export MESSAGE=$(cat ./HISTORY.md | sed -n \"/## v$npm_package_version/,/##/p\" | sed 's/## //' | awk 'NR>1{print buf}{buf = $0}') && test \"$MESSAGE\" || (echo 'proper changelog entry not found' && exit -1) && git tag v$npm_package_version -am \"$MESSAGE\"",
     "our:release:push": "git push origin master && git push origin --tags",
-    "test": "node --harmony ./source/test.js --joe-reporter=console"
+    "test": "node --harmony ./test.js --joe-reporter=console"
   },
   "maintainers": [],
-  "contributors": []
+  "contributors": [
+    "Benjamin Lupton (http://balupton.com)"
+  ]
 }
