add const to esnext feature usage

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
       "syntaxes": [
         "javascript",
         "esnext",
-        "require"
+        "require",
+        "const"
       ]
     },
     {
