--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "detect-indentation",
-  "version": "2.3.0",
+  "version": "3.0.0",
   "description": "Utility to detect the indentation used in a string",
   "homepage": "https://github.com/bevry/detect-indentation",
   "license": "MIT",
@@ -45,7 +45,8 @@
     "Benjamin Lupton (http://balupton.com)"
   ],
   "contributors": [
-    "Benjamin Lupton (http://balupton.com)"
+    "Benjamin Lupton (http://balupton.com)",
+    "dependabot-preview[bot] (http://github.com/apps/dependabot-preview)"
   ],
   "bugs": {
     "url": "https://github.com/bevry/detect-indentation/issues"
@@ -55,7 +56,7 @@
     "url": "https://github.com/bevry/detect-indentation.git"
   },
   "engines": {
-    "node": ">=4"
+    "node": ">=8"
   },
   "editions": [
     {
@@ -68,7 +69,7 @@
         "require"
       ],
       "engines": {
-        "node": "6 || 8 || 10 || 12 || 13",
+        "node": "8 || 10 || 12",
         "browsers": false
       }
     },
@@ -84,49 +85,32 @@
         "node": false,
         "browsers": "defaults"
       }
-    },
-    {
-      "description": "esnext compiled for node.js 4 with require for modules",
-      "directory": "edition-node-4",
-      "entry": "index.js",
-      "tags": [
-        "javascript",
-        "require"
-      ],
-      "engines": {
-        "node": "4 || 6 || 8 || 10 || 12 || 13",
-        "browsers": false
-      }
     }
   ],
-  "main": "index.js",
+  "main": "source/index.js",
   "browser": "edition-browsers/index.js",
-  "dependencies": {
-    "editions": "^2.2.0"
-  },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/preset-env": "^7.7.1",
-    "assert-helpers": "4.10.0",
+    "assert-helpers": "5.4.0",
     "eslint": "^6.6.0",
     "eslint-config-bevry": "^1.2.1",
-    "eslint-config-prettier": "^6.5.0",
+    "eslint-config-prettier": "^6.6.0",
     "eslint-plugin-prettier": "^3.1.1",
     "jsdoc": "^3.6.3",
-    "kava": "^3.2.0",
+    "kava": "4.0.0",
     "minami": "^1.2.3",
     "prettier": "^1.19.1",
     "projectz": "^1.10.0",
     "surge": "^0.21.3",
-    "valid-directory": "^1.0.0"
+    "valid-directory": "^1.1.1"
   },
   "scripts": {
     "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
-    "our:compile": "npm run our:compile:edition-browsers && npm run our:compile:edition-node-4",
+    "our:compile": "npm run our:compile:edition-browsers",
     "our:compile:edition-browsers": "env BABEL_ENV=edition-browsers babel --out-dir ./edition-browsers ./source",
-    "our:compile:edition-node-4": "env BABEL_ENV=edition-node-4 babel --out-dir ./edition-node-4 ./source",
     "our:deploy": "echo no need for this project",
     "our:meta": "npm run our:meta:docs && npm run our:meta:projectz",
     "our:meta:docs": "npm run our:meta:docs:jsdoc",
@@ -145,7 +129,7 @@
     "our:verify:directory": "npx valid-directory",
     "our:verify:eslint": "eslint --fix --ignore-pattern '**/*.d.ts' --ignore-pattern '**/vendor/' --ignore-pattern '**/node_modules/' --ext .mjs,.js,.jsx,.ts,.tsx ./source",
     "our:verify:prettier": "prettier --write ./source/**",
-    "test": "node ./test.js"
+    "test": "node ./source/test.js"
   },
   "eslintConfig": {
     "extends": [
@@ -165,23 +149,6 @@
             "@babel/preset-env",
             {
               "targets": "defaults",
-              "modules": "commonjs"
-            }
-          ]
-        ],
-        "plugins": [
-          "@babel/proposal-object-rest-spread"
-        ]
-      },
-      "edition-node-4": {
-        "sourceType": "script",
-        "presets": [
-          [
-            "@babel/preset-env",
-            {
-              "targets": {
-                "node": "4"
-              },
               "modules": "commonjs"
             }
           ]
